--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,8 @@
   width: 50%;
   display: flex;
   flex-wrap: wrap;
-  gap: 15px;
+  gap: 50px;
 }
 .card {
-  width: 150px;
-  height: 150px;
+  cursor: pointer;
 }
